--- a/layouts/partials/_showcase.html
+++ b/layouts/partials/_showcase.html
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-12 col-sm-12 col-md-8 col-lg-7 col-xl-6">
         <h1 class="display-1">
-          {{ .Site.Language.Params.title }}
+          {{ .Site.Params.title }}
           <br />
           <span
             >{{ .Site.Data.homepage.showcase.subtitle }}</span
